--- a/index.html
+++ b/index.html
@@ -1,58 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <style></style>
+<style></style>
 
-  <header>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./styles/my.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Nova+Mono"
-      rel="stylesheet"
-    />
-    <title>My Portfolio</title>
-  </header>
-  <body>
-    <div class="page-grid-container">
-      <!-- header -->
-      <div class="header-wrap">
-        <div class="nav-wrap">
-          <input type="checkbox" id="menu-toggle" />
-          <label for="menu-toggle" class="label-toggle fa fa-bars"></label>
-          <a class="nav-item current noselect"> Home </a>
-          <a class="nav-item noselect"> About</a>
-          <a class="nav-item noselect"> Contact</a>
-          <a class="nav-item noselect"> Project</a>
-        </div>
-        <div class="header"><!-- for header --></div>
-        <div class="logo">
-          <img src="./images/logo.svg" alt="logo" />
-        </div>
-      </div>
-      <!-- end header -->
-      <div class="main-grid-wrapper">
-        <div class="element1"><span>Profile picture</span></div>
-        <div class="element2"><span>Profile Detail</span></div>
-        <div class="element3">
-          <span>Skill set</span>
-          <div>
-            <img src="./images/css.png" alt="css" />
-            <img src="./images/html.png" alt="html" />
-            <img src="./images/java.png" alt="java" />
-            <img src="./images/javascript.png" alt="javascript" />
-            <img src="./images/photoshop.png" alt="photoshop" />
-            <img src="./images/ruby.png" alt="ruby" />
-          </div>
-        </div>
-        <div class="element4"><span>bg</span></div>
-      </div>
+<header>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./styles/my.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Nova+Mono" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet" />
+  <title>Kardkasem Saenyen</title>
+</header>
+
+<body>
+  <div class="main-container">
+    <div class="landing-container">
+      <div class="bg-main-1"></div>
+      <div class="bg-main-2"></div>
+      <div class="bg-main-3"></div>
+      <div class="bg-main-4"></div>
+      <p class="name">Kardkasem</p>
+      <p class="slogan ubuntu">I design app and make it work.</p>
     </div>
-  </body>
+
+    <div class="about-container">
+      <p class="about-h1 nova">#about me</p>
+      <p class="about-h2 ubuntu">“HELLO ? me : amatuer developer”</p>
+      <p class="about-p quicksand">
+        hello, My name is Kardkasem Saenyen :) too long right ? then you can
+        call me “moss”. <br />
+        &nbsp&nbsp&nbsp&nbspI could be define as an amatuer web developer, a newbie coder, another
+        living that love building website as well as coding useful tool to
+        make life easier using amazing technology we have. I do love creating
+        thing, even though my priorities is to make it work I also love and
+        enjoy to make it look elegant. I am a fan on pretty coding and make it
+        so it can be readable and easy to maintain.
+      </p>
+      p
+      <div class="slogan"></div>
+    </div>
+  </div>
+</body>
+
 </html>
