--- a/index.html
+++ b/index.html
@@ -30,17 +30,18 @@
       <p class="about-h1 nova">#about me</p>
       <p class="about-h2 ubuntu">“HELLO ? me : amatuer developer”</p>
       <p class="about-p quicksand">
-        hello, My name is Kardkasem Saenyen :) too long right ? then you can
-        call me “moss”. <br />
-        &nbsp&nbsp&nbsp&nbspI could be define as an amatuer web developer, a newbie coder, another
+        My name is Kardkasem Saenyen :) too long right ? then you can
+        call me “moss”. <br /><br />
+        I could be define as an amatuer web developer, a newbie coder, another
         living that love building website as well as coding useful tool to
-        make life easier using amazing technology we have. I do love creating
+        make life easier using amazing technology we have.
+        <br /><br /> I do love creating
         thing, even though my priorities is to make it work I also love and
-        enjoy to make it look elegant. I am a fan on pretty coding and make it
+        enjoy to make it look elegant for the user.
+        <br /><br /> I am also a fan of pretty coding and make it
         so it can be readable and easy to maintain.
       </p>
-      p
-      <div class="slogan"></div>
+      <div class="about-slogan ubuntu">“Simple yet Effective”</div>
     </div>
   </div>
 </body>
