--- a/index.html
+++ b/index.html
@@ -1,49 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-<style></style>
+  <style></style>
 
-<header>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="./styles/my.css" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Nova+Mono" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet" />
-  <title>Kardkasem Saenyen</title>
-</header>
+  <header>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/my.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nova+Mono"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap"
+      rel="stylesheet"
+    />
+    <title>Kardkasem Saenyen</title>
+  </header>
 
-<body>
-  <div class="main-container">
-    <div class="landing-container">
-      <div class="bg-main-1"></div>
-      <div class="bg-main-2"></div>
-      <div class="bg-main-3"></div>
-      <div class="bg-main-4"></div>
-      <p class="name">Kardkasem</p>
-      <p class="slogan ubuntu">I design app and make it work.</p>
+  <body>
+    <div class="main-container">
+      <div class="landing-container">
+        <div class="bg-main-1"></div>
+        <div class="bg-main-2"></div>
+        <div class="bg-main-3"></div>
+        <div class="bg-main-4"></div>
+        <p class="name">Kardkasem</p>
+        <p class="slogan ubuntu">I design app and make it work.</p>
+      </div>
+
+      <div class="about-container">
+        <p class="about-h1 nova">#about me</p>
+        <p class="about-h2 ubuntu">“HELLO ? me : amatuer developer”</p>
+        <p class="about-p quicksand">
+          My name is Kardkasem Saenyen :) too long right ? then you can call me
+          “Moss”. <br /><br />
+          I could be define as an amatuer web developer, a newbie coder, another
+          living that love building website as well as coding useful tool to
+          make life easier using amazing technology we have.
+          <br /><br />
+          I do love creating thing, even though my priorities is to make it work
+          I also love and enjoy to make it look elegant for the user.
+          <br /><br />
+          I am also a fan of pretty coding and make it so it can be readable and
+          easy to maintain.
+        </p>
+        <div class="about-slogan ubuntu">“Simple yet Effective”</div>
+      </div>
+
+      <div class="project-container">
+        <p class="project-h1 nova">#project</p>
+        <div class="project-slider-wrap">
+          <span class="slider-index"
+            ><p>1</p>
+            <p>2</p>
+            <p>3</p>
+            <p>4</p>
+            <p>5</p>
+          </span>
+          <div class="slides">
+            <div id="slide-1">
+              <p class="project-h2 ubuntu">project 1</p>
+              <p class="project-p quicksand">this project detail</p>
+              <a href="" class="project-link"
+                >to git hub <i class="fab fa-github"></i
+              ></a>
+            </div>
+            <div id="slide-2">
+              <p class="project-h2 ubuntu">project 2</p>
+              <p class="project-p quicksand"></p>
+              <a href="" class="project-link"
+                >to git hub <i class="fab fa-github"></i
+              ></a>
+            </div>
+            <div id="slide-3">
+              <p class="project-h2 ubuntu">project 3</p>
+              <p class="project-p quicksand"></p>
+              <a href="" class="project-link">
+                to git hub <i class="fab fa-github"></i
+              ></a>
+            </div>
+            <div id="slide-4">
+              <p class="project-h2 ubuntu">project 4</p>
+              <p class="project-p quicksand"></p>
+              <a href="" class="project-link"
+                >to git hub <i class="fab fa-github"></i
+              ></a>
+            </div>
+            <div id="slide-5">
+              <p class="project-h2 quicksand">project 5</p>
+              <p class="project-p quicksand"></p>
+              <a href="" class="project-link"
+                >to git hub <i class="fab fa-github"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <div class="about-container">
-      <p class="about-h1 nova">#about me</p>
-      <p class="about-h2 ubuntu">“HELLO ? me : amatuer developer”</p>
-      <p class="about-p quicksand">
-        My name is Kardkasem Saenyen :) too long right ? then you can
-        call me “moss”. <br /><br />
-        I could be define as an amatuer web developer, a newbie coder, another
-        living that love building website as well as coding useful tool to
-        make life easier using amazing technology we have.
-        <br /><br /> I do love creating
-        thing, even though my priorities is to make it work I also love and
-        enjoy to make it look elegant for the user.
-        <br /><br /> I am also a fan of pretty coding and make it
-        so it can be readable and easy to maintain.
-      </p>
-      <div class="about-slogan ubuntu">“Simple yet Effective”</div>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
