--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <style></style>
 
-  <header>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <link rel = "icon" type = "image/png" sizes="16x16" href = "./images/icon.png">
+    <!-- For apple devices -->
+    <link rel = "apple-touch-icon" type = "image/png" sizes="16x16" href = "./images/icon.png"/>
+    
     <link rel="stylesheet" href="./styles/my.css" />
     <link
       rel="stylesheet"
@@ -26,11 +31,25 @@
       rel="stylesheet"
     />
     <title>Kardkasem Saenyen</title>
-  </header>
-
-  <body>
+  </head>
+  <body>  
+      <div class="nav-container">
+          <nav>
+            <input type="checkbox" id="nav-toggle" >
+            <label for="nav-toggle" class="burger-menu">
+               <img src="./images/menu.svg" alt="">
+            </label>
+            <div class="left-menu">
+              <li><a href="#home">Home</a></li> 
+              <li><a href="#about">About</a></li> 
+              <li><a href="#project">Project</a></li> 
+              <li><a href="#contact">Contact</a></li> 
+            </div>
+            <a href="index.html" class="logo"> <img src="./images/icon.svg" alt=""> ardkasem</a>
+          </nav>
+      </div>
     <div class="main-container">
-      <div class="landing-container">
+      <div class="landing-container" id="home">
         <div class="bg-main-1"></div>
         <div class="bg-main-2"></div>
         <div class="bg-main-3"></div>
@@ -38,73 +57,127 @@
         <p class="name">Kardkasem</p>
         <p class="slogan ubuntu">I design app and make it work.</p>
       </div>
-
-      <div class="about-container">
-        <p class="about-h1 nova">#about me</p>
-        <p class="about-h2 ubuntu">“HELLO ? me : amatuer developer”</p>
-        <p class="about-p quicksand">
-          My name is Kardkasem Saenyen :) too long right ? then you can call me
-          “Moss”. <br /><br />
-          I could be define as an amatuer web developer, a newbie coder, another
-          living that love building website as well as coding useful tool to
-          make life easier using amazing technology we have.
-          <br /><br />
-          I do love creating thing, even though my priorities is to make it work
-          I also love and enjoy to make it look elegant for the user.
-          <br /><br />
-          I am also a fan of pretty coding and make it so it can be readable and
-          easy to maintain.
-        </p>
-        <div class="about-slogan ubuntu">“Simple yet Effective”</div>
+      <div class="about-wrapper" id="about">
+        <div class="about-container">
+          <p class="about-h1 nova">#about me</p>
+          <p class="about-h2 ubuntu">“HELLO ? me : amatuer developer”</p>
+          <p class="about-p quicksand">
+            <br />
+            My name is Kardkasem Saenyen :) too long right ? then you can call
+            me “Moss”. <br /><br />
+            I could be define as an amatuer web developer, a newbie coder,
+            another living that love building website as well as coding useful
+            tool to make life easier using amazing technology we have.
+            <br /><br />
+            I do love creating thing, even though my priorities is to make it
+            work I also love and enjoy to make it look elegant for the user.
+            <br /><br />
+            I am also a fan of pretty coding and make it so it can be readable
+            and easy to maintain.
+            <br /><br />
+            apart from my coding life I enjoy playing guitar, spending time
+            travel around the world with my friend.
+          </p>
+          <div class="about-slogan ubuntu">
+            <span>“Simple yet Effective”</span>
+          </div>
+        </div>
       </div>
-
-      <div class="project-container">
-        <p class="project-h1 nova">#project</p>
-        <div class="project-slider-wrap">
-          <span class="slider-index"
-            ><p>1</p>
-            <p>2</p>
-            <p>3</p>
-            <p>4</p>
-            <p>5</p>
-          </span>
-          <div class="slides">
-            <div id="slide-1">
-              <p class="project-h2 ubuntu">project 1</p>
-              <p class="project-p quicksand">this project detail</p>
-              <a href="" class="project-link"
-                >to git hub <i class="fab fa-github"></i
-              ></a>
-            </div>
-            <div id="slide-2">
-              <p class="project-h2 ubuntu">project 2</p>
-              <p class="project-p quicksand"></p>
-              <a href="" class="project-link"
-                >to git hub <i class="fab fa-github"></i
-              ></a>
-            </div>
-            <div id="slide-3">
-              <p class="project-h2 ubuntu">project 3</p>
-              <p class="project-p quicksand"></p>
-              <a href="" class="project-link">
-                to git hub <i class="fab fa-github"></i
-              ></a>
-            </div>
-            <div id="slide-4">
-              <p class="project-h2 ubuntu">project 4</p>
-              <p class="project-p quicksand"></p>
-              <a href="" class="project-link"
-                >to git hub <i class="fab fa-github"></i
-              ></a>
-            </div>
-            <div id="slide-5">
-              <p class="project-h2 quicksand">project 5</p>
-              <p class="project-p quicksand"></p>
-              <a href="" class="project-link"
-                >to git hub <i class="fab fa-github"></i
-              ></a>
+      <!--end about-->
+      <div class="project-wrapper" id="project">
+        <div class="project-container">
+          <p class="project-h1 nova">#project</p>
+          <div class="project-slider-wrap">
+            <span class="slider-index"
+              ><p>1</p>
+              <p>2</p>
+              <p>3</p>
+              <p>4</p>
+              <p>5</p>
+              <span>
+                swipe to see more <i class="fas fa-long-arrow-alt-right"></i>
+              </span>
+            </span>
+            <div class="slides">
+              <div id="slide-1">
+                <p class="project-h2 ubuntu">project 1</p>
+                <p class="project-p quicksand">this project detail</p>
+                <a href="" class="project-link"
+                  >to git hub <i class="fab fa-github"></i
+                ></a>
+              </div>
+              <div id="slide-2">
+                <p class="project-h2 ubuntu">project 2</p>
+                <p class="project-p quicksand"></p>
+                <a href="" class="project-link"
+                  >to git hub <i class="fab fa-github"></i
+                ></a>
+              </div>
+              <div id="slide-3">
+                <p class="project-h2 ubuntu">project 3</p>
+                <p class="project-p quicksand"></p>
+                <a href="" class="project-link"
+                  >to git hub <i class="fab fa-github"></i
+                ></a>
+              </div>
+              <div id="slide-4">
+                <p class="project-h2 ubuntu">project 4</p>
+                <p class="project-p quicksand"></p>
+                <a href="" class="project-link"
+                  >to git hub <i class="fab fa-github"></i
+                ></a>
+              </div>
+              <div id="slide-5">
+                <p class="project-h2 quicksand">project 5</p>
+                <p class="project-p quicksand"></p>
+                <a href="" class="project-link ubuntu"
+                  >to git hub <i class="fab fa-github"></i
+                ></a>
+              </div>
             </div>
           </div>
+        </div>
+      </div>
+      <!-- end project-->
+      <div class="contact-wrapper" id="contact">
+        <div class="contact-container">
+          <p class="contact-h1 nova">#contact me</p>
+          <div class="form-wrapper">
+            <form
+              action="javascript:alert('Thank you for getting in touch!')"
+              method="POST"
+            >
+              <div class="form-input">
+                <input type="text" required="required" id="name" />
+                <label for="input" class="form-label">Name</label
+                ><i class="bar"></i>
+              </div>
+              <div class="form-input">
+                <input type="text" required="required" />
+                <label for="input" class="form-label">Email</label
+                ><i class="bar"></i>
+              </div>
+              <div class="form-input">
+                <textarea required="required" cols="30" rows="5"  resize: none;></textarea>
+                <label for="textarea" class="form-label">Message</label
+                ><i class="bar"></i>
+              </div>
+              <div class="form-button">
+                <button type="submit">
+                  <i class="fa fa-paper-plane" aria-hidden="true"></i>
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!--end form-->
+      <div class="footer-wrap">
+        <div class="footer-container">
+          <span><i class="fab fa-yelp"></i>follow me on</span>
+          <i class="fab fa-facebook-square"></i>
+          <i class="fab fa-github"></i>
+          <i class="fab fa-linkedin"></i>
         </div>
       </div>
     </div>
