--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <link rel = "icon" type = "image/png" sizes="16x16" href = "./images/icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/icon.png" />
     <!-- For apple devices -->
-    <link rel = "apple-touch-icon" type = "image/png" sizes="16x16" href = "./images/icon.png"/>
-    
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      sizes="16x16"
+      href="./images/icon.png"
+    />
+
     <link rel="stylesheet" href="./styles/my.css" />
     <link
       rel="stylesheet"
@@ -31,23 +36,31 @@
       rel="stylesheet"
     />
     <title>Kardkasem Saenyen</title>
+
+    <meta
+      name="description"
+      content="My first portfollio showcase 
+    using pure html and css. this portfollio is done as part of assignment at coderacademy."
+    />
   </head>
-  <body>  
-      <div class="nav-container">
-          <nav>
-            <input type="checkbox" id="nav-toggle" >
-            <label for="nav-toggle" class="burger-menu">
-               <img src="./images/menu.svg" alt="">
-            </label>
-            <div class="left-menu">
-              <li><a href="#home">Home</a></li> 
-              <li><a href="#about">About</a></li> 
-              <li><a href="#project">Project</a></li> 
-              <li><a href="#contact">Contact</a></li> 
-            </div>
-            <a href="index.html" class="logo"> <img src="./images/icon.svg" alt=""> ardkasem</a>
-          </nav>
-      </div>
+  <body>
+    <div class="nav-container">
+      <nav class="nav-wrap">
+        <input type="checkbox" id="nav-toggle" />
+        <label for="nav-toggle" class="burger-menu">
+          <img src="./images/menu.svg" alt="" />
+        </label>
+        <div class="left-menu">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#project">Project</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </div>
+        <a href="index.html" class="logo">
+          <img src="./images/icon.svg" alt="" /> ardkasem</a
+        >
+      </nav>
+    </div>
     <div class="main-container">
       <div class="landing-container" id="home">
         <div class="bg-main-1"></div>
@@ -100,38 +113,40 @@
             </span>
             <div class="slides">
               <div id="slide-1">
-                <p class="project-h2 ubuntu">project 1</p>
+                <p class="project-h2 ubuntu">
+                  project 1
+                </p>
                 <p class="project-p quicksand">this project detail</p>
                 <a href="" class="project-link"
-                  >to git hub <i class="fab fa-github"></i
+                  >to Github <i class="fab fa-github"></i
                 ></a>
               </div>
               <div id="slide-2">
                 <p class="project-h2 ubuntu">project 2</p>
                 <p class="project-p quicksand"></p>
                 <a href="" class="project-link"
-                  >to git hub <i class="fab fa-github"></i
+                  >to Github <i class="fab fa-github"></i
                 ></a>
               </div>
               <div id="slide-3">
                 <p class="project-h2 ubuntu">project 3</p>
                 <p class="project-p quicksand"></p>
                 <a href="" class="project-link"
-                  >to git hub <i class="fab fa-github"></i
+                  >to Github <i class="fab fa-github"></i
                 ></a>
               </div>
               <div id="slide-4">
                 <p class="project-h2 ubuntu">project 4</p>
                 <p class="project-p quicksand"></p>
                 <a href="" class="project-link"
-                  >to git hub <i class="fab fa-github"></i
+                  >to Github <i class="fab fa-github"></i
                 ></a>
               </div>
               <div id="slide-5">
-                <p class="project-h2 quicksand">project 5</p>
+                <p class="project-h2 ubuntu">project 5</p>
                 <p class="project-p quicksand"></p>
                 <a href="" class="project-link ubuntu"
-                  >to git hub <i class="fab fa-github"></i
+                  >to Github <i class="fab fa-github"></i
                 ></a>
               </div>
             </div>
@@ -148,17 +163,27 @@
               method="POST"
             >
               <div class="form-input">
-                <input type="text" required="required" id="name" />
+                <input
+                  type="text"
+                  required="required"
+                  id="name"
+                  autocomplete="off"
+                />
                 <label for="input" class="form-label">Name</label
                 ><i class="bar"></i>
               </div>
               <div class="form-input">
-                <input type="text" required="required" />
+                <input type="text" required="required" autocomplete="off" />
                 <label for="input" class="form-label">Email</label
                 ><i class="bar"></i>
               </div>
               <div class="form-input">
-                <textarea required="required" cols="30" rows="5"  resize: none;></textarea>
+                <textarea
+                  required="required"
+                  cols="30"
+                  rows="5"
+                  autocomplete="off"
+                ></textarea>
                 <label for="textarea" class="form-label">Message</label
                 ><i class="bar"></i>
               </div>
