update nav to hover,,fixed bug

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
       rel="stylesheet"
     />
     <title>Kardkasem Saenyen</title>
-
     <meta
       name="description"
       content="My first portfollio showcase 
@@ -46,15 +45,16 @@
   <body>
     <div class="nav-container">
       <nav class="nav-wrap">
-        <input type="checkbox" id="nav-toggle" />
-        <label for="nav-toggle" class="burger-menu">
-          <img src="./images/menu.svg" alt="" />
-        </label>
-        <div class="left-menu">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#project">Project</a></li>
-          <li><a href="#contact">Contact</a></li>
+        <div class="dropdown">
+          <a href="" role="none" tabindex="0" class="menu-icon">
+            <i class="fas fa-caret-down"></i>
+          </a>
+          <div class="left-menu">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#project">Project</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </div>
         </div>
         <a href="index.html" class="logo">
           <img src="./images/icon.svg" alt="" /> ardkasem</a
