fix anchor link and  add meta opengraph data

--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
       content="My first portfollio showcase 
     using pure html and css. this portfollio is done as part of assignment at coderacademy."
     />
+    <meta property="og:title" content="Kardkasem Saenyen" />
+    <meta property="og:url" content="kardkasem.netlify.com" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="”og:description”"
+      content="My first portfollio showcase 
+    using pure html and css. this portfollio is done as part of assignment at coderacademy."
+    />
+    <meta property=”og:image” content=”./images/icon.svg” />
   </head>
   <body>
     <div class="nav-container">
@@ -76,8 +85,8 @@
         <p class="slogan ubuntu">I design app and make it work.</p>
       </div>
 
-      <section id="about"></section>
       <div class="about-wrapper">
+        <a id="about"></a>
         <div class="about-container">
           <p class="about-h1 nova">#about me</p>
           <p class="about-h2 ubuntu">“HELLO ? me : amatuer developer”</p>
@@ -104,8 +113,8 @@
         </div>
       </div>
       <!--end about-->
-      <section id="project"></section>
       <div class="project-wrapper">
+        <a id="project"></a>
         <div class="project-container">
           <p class="project-h1 nova">#project</p>
           <div class="project-slider-wrap">
@@ -162,8 +171,9 @@
         </div>
       </div>
       <!-- end project-->
-      <section id="contact"></section>
+
       <div class="contact-wrapper">
+        <a id="contact"></a>
         <div class="contact-container">
           <p class="contact-h1 nova">#contact me</p>
           <div class="form-wrapper">
