--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     <meta property="og:url" content="kardkasem.netlify.com" />
     <meta property="og:type" content="website" />
     <meta
-      property="”og:description”"
+      property="og:description"
       content="My first portfollio showcase 
     using pure html and css. this portfollio is done as part of assignment at coderacademy."
     />
-    <meta property=”og:image” content=”./images/icon.svg” />
+    <meta property="og:image" content="${require('./images/icon.svg')}" />
   </head>
   <body>
     <div class="nav-container">
