--- a/index.html
+++ b/index.html
@@ -41,15 +41,18 @@
       content="My first portfollio showcase 
     using pure html and css. this portfollio is done as part of assignment at coderacademy."
     />
-    <meta property="og:title" content="Kardkasem Saenyen" />
-    <meta property="og:url" content="kardkasem.netlify.com" />
-    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="${require('./images/thumbnail.png')}/og-image.jpg"
+    />
+    <meta property="og:image:width" content="310" />
+    <meta property="og:image:height" content="465" />
     <meta
       property="og:description"
-      content="My first portfollio showcase 
-    using pure html and css. this portfollio is done as part of assignment at coderacademy."
+      content="My first portfolio showcase using pure html and css. this portfolio is done as part of assignment at coder academy(Melbourne)."
     />
-    <meta property="og:image" content="${require('./images/icon.svg')}" />
+    <meta property="og:title" content="kardkasem saenyen" />
+    <meta property="og:url" content="kardkasem.netlify.com" />
   </head>
   <body>
     <div class="nav-container">
