--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
       content="My first portfollio showcase 
     using pure html and css. this portfollio is done as part of assignment at coderacademy."
     />
-    <meta property="og:image" content="${require('./images/thumbnail.png')}" />
+    <meta
+      property="og:image"
+      content="ttps://kardkasem.netlify.com/images/thumbnail.png"
+    />
     <meta property="og:image:width" content="310" />
     <meta property="og:image:height" content="465" />
     <meta
