--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     />
     <meta
       property="og:image"
-      content="ttps://kardkasem.netlify.com/images/thumbnail.png"
+      content="https://kardkasem.netlify.com/images/thumbnail.png"
     />
     <meta property="og:image:width" content="310" />
     <meta property="og:image:height" content="465" />
