--- a/index.html
+++ b/index.html
@@ -38,21 +38,22 @@
     <title>Kardkasem Saenyen</title>
     <meta
       name="description"
-      content="My first portfollio showcase 
-    using pure html and css. this portfollio is done as part of assignment at coderacademy."
+      content="My first portfolio showcase using pure html and css. this portfolio is done as part of assignment at coder academy(Melbourne)."
     />
     <meta
       property="og:image"
       content="https://kardkasem.netlify.com/images/thumbnail.png"
     />
+ 
     <meta property="og:image:width" content="310" />
     <meta property="og:image:height" content="465" />
     <meta
       property="og:description"
       content="My first portfolio showcase using pure html and css. this portfolio is done as part of assignment at coder academy(Melbourne)."
     />
-    <meta property="og:title" content="kardkasem saenyen" />
-    <meta property="og:url" content="kardkasem.netlify.com" />
+    <meta property="og:title" content="Kardkasem | Portfolio" />
+    <meta property="og:url" content="https://kardkasem.netlify.com" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div class="nav-container">
@@ -180,22 +181,20 @@
         <div class="contact-container">
           <p class="contact-h1 nova">#contact me</p>
           <div class="form-wrapper">
-            <form
-              action="javascript:alert('Thank you for getting in touch!')"
-              method="POST"
-            >
+            <form action="https://formspree.io/mos311063@gmail.com" method="POST" />
               <div class="form-input">
                 <input
                   type="text"
                   required="required"
                   id="name"
                   autocomplete="off"
+                  name="name"
                 />
                 <label for="input" class="form-label">Name</label
                 ><i class="bar"></i>
               </div>
               <div class="form-input">
-                <input type="text" required="required" autocomplete="off" />
+                <input type="text" required="required" autocomplete="off" name="email"/>
                 <label for="input" class="form-label">Email</label
                 ><i class="bar"></i>
               </div>
@@ -205,6 +204,7 @@
                   cols="30"
                   rows="5"
                   autocomplete="off"
+                  name="message"
                 ></textarea>
                 <label for="textarea" class="form-label">Message</label
                 ><i class="bar"></i>
