fixed thumb and font

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       property="og:image"
       content="https://kardkasem.netlify.com/images/thumbnail.png"
     />
- 
+
     <meta property="og:image:width" content="310" />
     <meta property="og:image:height" content="465" />
     <meta
@@ -52,7 +52,7 @@
       content="My first portfolio showcase using pure html and css. this portfolio is done as part of assignment at coder academy(Melbourne)."
     />
     <meta property="og:title" content="Kardkasem | Portfolio" />
-    <meta property="og:url" content="https://kardkasem.netlify.com" />
+    <meta property="og:url" content="https://kardkasem.netlify.com/" />
     <meta property="og:type" content="website" />
   </head>
   <body>
@@ -166,7 +166,7 @@
               <div id="slide-5">
                 <p class="project-h2 ubuntu">project 5</p>
                 <p class="project-p quicksand"></p>
-                <a href="" class="project-link ubuntu"
+                <a href="" class="project-link"
                   >to Github <i class="fab fa-github"></i
                 ></a>
               </div>
@@ -181,7 +181,10 @@
         <div class="contact-container">
           <p class="contact-h1 nova">#contact me</p>
           <div class="form-wrapper">
-            <form action="https://formspree.io/mos311063@gmail.com" method="POST" />
+            <form
+              action="https://formspree.io/mos311063@gmail.com"
+              method="POST"
+            >
               <div class="form-input">
                 <input
                   type="text"
@@ -194,7 +197,12 @@
                 ><i class="bar"></i>
               </div>
               <div class="form-input">
-                <input type="text" required="required" autocomplete="off" name="email"/>
+                <input
+                  type="text"
+                  required="required"
+                  autocomplete="off"
+                  name="email"
+                />
                 <label for="input" class="form-label">Email</label
                 ><i class="bar"></i>
               </div>
