add project animate and link

--- a/index.html
+++ b/index.html
@@ -6,16 +6,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
-    <link rel="icon" type="image/png" sizes="16x16" href="./images/icon.png" />
-    <!-- For apple devices -->
+    <!--favicon-->
     <link
-      rel="apple-touch-icon"
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./images/icon.png"
+      href="./images/favicon-16x16.png"
     />
+    <!-- For apple devices -->
 
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/apple-touch-icon.png"
+    />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#393939" />
+    <!--style-->
     <link rel="stylesheet" href="./styles/my.css" />
     <link
       rel="stylesheet"
@@ -112,7 +124,7 @@
             and travel around to new place with my friend and famiy.
           </p>
           <div class="about-slogan ubuntu">
-            <span></span>
+            <span>&nbsp;</span>
           </div>
         </div>
       </div>
@@ -123,11 +135,11 @@
           <p class="project-h1 nova">#project</p>
           <div class="project-slider-wrap">
             <span class="slider-index"
-              ><p>1</p>
-              <p>2</p>
-              <p>3</p>
-              <p>4</p>
-              <p>5</p>
+              ><p><a href="#slide-1">1</a></p>
+              <p><a href="#slide-2">2</a></p>
+              <p><a href="#slide-3">3</a></p>
+              <p><a href="#slide-4">4</a></p>
+              <p><a href="#slide-5">5</a></p>
               <span>
                 swipe to see more <i class="fas fa-long-arrow-alt-right"></i>
               </span>
