--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
       sizes="180x180"
       href="./images/apple-touch-icon.png"
     />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#393939" />
+    <link
+      rel="mask-icon"
+      href="./images/safari-pinned-tab.svg"
+      color="#393939"
+    />
     <!--style-->
     <link rel="stylesheet" href="./styles/my.css" />
     <link
