add link to footer,

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <p class="name">Kardkasem</p>
         <p class="slogan ubuntu">I design app and make it work.</p>
       </div>
-
+    
       <div class="about-wrapper">
         <a id="about"></a>
         <div class="about-container">
@@ -127,8 +127,51 @@
             apart from my coding life I enjoy playing guitar, badminton, cooking
             and travel around to new place with my friend and famiy.
           </p>
-          <div class="about-slogan ubuntu">
-            <span>&nbsp;</span>
+          <div class="about-history quicksand">
+            <span class="ubuntu">Education history</span>
+            <ul>
+              <li>
+                <h2>1999-2012</h2>
+                Darasamutr College
+              </li>
+              <li>
+                <h2>2013</h2>
+                Noble Park English Language School
+              </li>
+              <li>
+                <h2>2014</h2>
+                Elisabeth Murdoch College
+              </li>
+              <li>
+                <h2>2015</h2>
+                Keysborough College
+              </li>
+              <li>
+                <h2>2016-mid</h2>
+                Chisholm Institute
+              </li>
+              <li>
+                <h2>2017-mid</h2>
+                Holmesglen (CertIV programming)
+              </li>
+              <li>
+                <h2>2018-mid</h2>
+                Holmesglen (CertIV programming)
+              </li>
+              <li>
+                <h2>2019</h2>
+                Coderacademy Bootcamp Melbourne
+              </li>
+            </ul>
+            <span class="ubuntu">Work history</span>
+            <ul>
+              <p>
+                I work part time job in 
+                various place mostly in retail
+                field(kitchen hand, waiter,delivery), I currently dont have any
+                programming work experience relate yet.
+              </p>
+            </ul>
           </div>
         </div>
       </div>
@@ -246,9 +289,12 @@
       <div class="footer-wrap">
         <div class="footer-container">
           <span><i class="fab fa-yelp"></i>follow me on</span>
-          <i class="fab fa-facebook-square"></i>
-          <i class="fab fa-github"></i>
-          <i class="fab fa-linkedin"></i>
+          <a href = https://github.com/mos311063 >  
+            <i class="fab fa-github"></i>
+          </a>    
+          <a href = https://www.linkedin.com/in/kardkasem-saenyen-87b7ab187/ >  
+            <i class="fab fa-linkedin"></i>
+          </a>  
         </div>
       </div>
     </div>
