--- a/index.html
+++ b/index.html
@@ -104,7 +104,27 @@
         <p class="name">Kardkasem</p>
         <p class="slogan ubuntu">I design app and make it work.</p>
       </div>
-    
+      <div class="bio-wrapper">
+          <div class="bio-container">
+            <div class="bio-profile quicksand">
+                <li><h3 class="ubuntu">profile</h3></li> 
+                <li><h4>name : kardkasem </h4></li>
+                <li><h4>contact-number : <a href="tel:0414306479">0414306479</a></h4></li>
+                <li><h4>email : mos311063@hotmail.com </li>
+            </div>
+            <div class="bio-skill quicksand">
+                <li><h3 class="ubuntu">skill</h3></li> 
+                <li><h4>java </h4></li>
+                <div class="gauge"  style="width: 60%">6/10</div>
+                <li><h4>ruby</h4></li>
+                <div class="gauge" style="width: 70%">7/10</div>
+                <li><h4>javascript</h4></li>
+                <div class="gauge" style="width: 50%">5/10</div>
+                <li><h4>html,css</h4></li>
+                <div class="gauge" style="width: 80%">8/10</div>
+            </div>
+        </div>
+      </div>
       <div class="about-wrapper">
         <a id="about"></a>
         <div class="about-container">
