update bio, update aanimation, final version to submit

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#project">Project</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#profile">contact</a></li>
+            <li><a href="#contact">Email me</a></li>
           </div>
           <a role="button" class="menu-icon-close" href="#">
             <i class="fas fa-caret-up"></i>
@@ -105,23 +106,40 @@
         <p class="slogan ubuntu">I design app and make it work.</p>
       </div>
       <div class="bio-wrapper">
+          <a id="profile"></a>
           <div class="bio-container">
             <div class="bio-profile quicksand">
-                <li><h3 class="ubuntu">profile</h3></li> 
-                <li><h4>name : kardkasem </h4></li>
-                <li><h4>contact-number : <a href="tel:0414306479">0414306479</a></h4></li>
-                <li><h4>email : mos311063@hotmail.com </li>
+                <li><h3 class="ubuntu">contact <i class="fab fa-weixin"></i></h3></li> 
+                <li><h4> <i class="fas fa-user-circle"></i> name : kardkasem saenyen </h4></li>
+                <li><h4><i class="fas fa-address-book"></i> contact-number : <a href="tel:0414306479">0414306479</a></h4></li>
+                <li><h4><i class="fas fa-envelope"></i> email : mos311063@hotmail.com </li>
+                <li><h4><i class="fab fa-github"></i> github : <a href = https://github.com/mos311063 > to my github</a></li>
+                  <li><h4><i class="fab fa-linkedin"></i> linkedin : <a href = https://www.linkedin.com/in/kardkasem-saenyen-87b7ab187/ > to my linkedin  </a>   </li>
+
+                 
             </div>
             <div class="bio-skill quicksand">
                 <li><h3 class="ubuntu">skill</h3></li> 
                 <li><h4>java </h4></li>
-                <div class="gauge"  style="width: 60%">6/10</div>
+                <div class="gauge-track">
+                <div class="gauge blue"><i class="fab fa-cloudscale"></i></div>
+              </div>
                 <li><h4>ruby</h4></li>
-                <div class="gauge" style="width: 70%">7/10</div>
+                <div class="gauge-track">
+                <div class="gauge pink" ><i class="fab fa-cloudscale"></i></div>
+              </div>
                 <li><h4>javascript</h4></li>
-                <div class="gauge" style="width: 50%">5/10</div>
+                <div class="gauge-track">
+                <div class="gauge yellow"><i class="fab fa-cloudscale"></i></div>
+              </div>
                 <li><h4>html,css</h4></li>
-                <div class="gauge" style="width: 80%">8/10</div>
+                <div class="gauge-track">
+                <div class="gauge pink" ><i class="fab fa-cloudscale"></i></div>
+              </div>
+              <li><h4>google</h4></li>
+                <div class="gauge-track">
+                <div class="gauge red" ><i class="fab fa-cloudscale"></i></div>
+              </div>
             </div>
         </div>
       </div>
@@ -258,7 +276,7 @@
       <div class="contact-wrapper">
         <a id="contact"></a>
         <div class="contact-container">
-          <p class="contact-h1 nova">#contact me</p>
+          <p class="contact-h1 nova">#email me</p>
           <div class="form-wrapper">
             <form
               action="https://formspree.io/mos311063@gmail.com"
