--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#393939" />
 
   <!--favicon other -->
-  <link rel="manifest" href=" ./images/site.webmanifest">
+  <link rel="manifest" href="images/site.webmanifest">
   <link rel="shortcut icon" href=" ./images/favicon.ico">
   <meta name="msapplication-TileColor" content="#393939">
-  <meta name="msapplication-config" content=" ./images/browserconfig.xml">
+  <meta name="msapplication-config" content="images/browserconfig.xml">
   <meta name="theme-color" content="#393939">
 
   <!--style-->
